<resources>
    <string name="app_name">我来保</string>
    <string name="app_name_test">我来保测试版</string>
    <string name="net_noconnection">当前网络不可用</string>
    <string name="img_desc">img_desc</string>
    <string name="req_fail">网络请求失败</string>
    <string name="take_photo">拍照</string>
    <string name="pick_photo">相册</string>
    <string name="permission_failed">没有获取到权限，请到应用管理-我来保-权限-允许全部权限</string>
    <string name="login_successful">登录成功</string>
    <string name="regist">注册</string>
    <string name="user_name">我的</string>
    <string name="hotline_tip">您确定要拨打客服电话吗?</string>
    <string name="submit">提交</string>
    <string name="finish">完成</string>
    <string name="login_out">退出登录</string>
    <string name="usercenter_userinfo">我的资料</string>
    <string name="usercenter_cars">车辆管理</string>
    <string name="usercenter_wallet">我的钱包</string>
    <string name="about_as_text">我来保专注服务于保险代理人及消费者，为保险代理人提供互联网车险服务，并具备互联网保险产品研发、销售、运营能力的综合互联网金融服务平台"</string>
    <string name="prove_name">实名认证</string>
    <string name="pass_tip">请输入6-16位大小写字母，数字</string>
    <string name="tip_logout">您确定要退出登录吗？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="find_pwd">找回密码</string>
    <string name="find_pwd_hint_pwd">设置登录密码</string>
    <string name="find_pwd_hint_pwd1">设置登录密码 (至少6~16位数字字母组合)</string>
    <string name="find_pwd_hint_confirm_pwd">确认密码</string>
    <string name="tip_pwd_not_same">两次输入密码不一致</string>
    <string name="login">登录</string>
    <string name="tip_verify_code_error">验证码不正确</string>
    <string name="login_code">快捷登录</string>
    <string name="login_pwd">密码登录</string>
    <string name="login_hint_mobile">手机号码</string>
    <string name="mobile_null_tip">手机号码不能为空</string>
    <string name="get_code">获取验证码</string>
    <string name="get_code_sendding">验证码已发出</string>
    <string name="login_hint_pwd">密码</string>
    <string name="login_hint_image_code">图文验证码</string>
    <string name="login_hint_code">验证码</string>
    <string name="login_go">立即登录</string>
    <string name="login_no_account">还没账号?</string>
    <string name="login_tip_code">验证码不正确</string>
    <string name="login_tip_code_null">验证码不能为空</string>
    <string name="login_tip_imgcode">图文验证码不正确</string>
    <string name="login_tip_imgcode_null">图文验证码不能为空</string>
    <string name="regist_go">立即注册</string>
    <string name="getting_code">正在获取验证码</string>
    <string name="tip_pwd_null">密码不能为空</string>
    <string name="tip_confirm_pwd_null">确认密码不能为空</string>
    <string name="tip_code_null">验证码不能为空</string>
    <string name="go">马上体验</string>
    <string name="regist_agree">同意</string>
    <string name="regist_web">《用户注册协议》</string>
    <string name="regist_web_title">用户注册协议</string>
    <string name="regist_has_account">已有账号?</string>
    <string name="regist_go_login">去登录</string>
    <string name="regist_suc">注册成功</string>
    <string name="regist_reg_check">请阅读并勾选用户注册协议</string>
    <string name="other_login_bind_error">绑定失败</string>
    <string name="other_login_cancel">用户取消操作</string>
    <string name="other_login_tip">社交账户直接登录</string>
    <string name="other_login_wx">微信</string>
    <string name="other_login_qq">QQ</string>
    <string name="other_login_weibo">微博</string>
    <string name="tab_homepage">首页</string>
    <string name="tab_faxian">发现</string>
    <string name="tab_news">知识库</string>
    <string name="tab_friend">保友圈</string>
    <string name="home_car_go_title">报价下单</string>
    <string name="home_car_city">投保城市</string>
    <string name="home_car_num">车牌号码</string>
    <string name="home_car_name">车主姓名</string>
    <string name="home_go">立即报价</string>
    <string name="home_add_user">添加客户</string>
    <string name="home_hint_car_num">请输入车牌号</string>
    <string name="home_hint_car_people">请输入车主姓名</string>
    <string name="home_add_group_user">团队增员</string>
    <string name="home_gps">定位中</string>
    <string name="home_choose_city">选择城市</string>
    <string name="home_city_search_hint">输入城市名称</string>
    <string name="home_city_search_title_gps">定位</string>
    <string name="home_city_search_title_hot_city">热门</string>
    <string name="confirm_car_info">确认车辆信息</string>
    <string name="confirm_car_info_top_tip">点击拍摄行驶证主页，将自动识别行驶证信息，方便您快速报价</string>
    <string name="confirm_car_info_camera_auto_ocr">拍照自动识别</string>
    <string name="confirm_car_info_driving_license_info">车辆行驶证信息</string>
    <string name="confirm_car_info_input_help">填写指南</string>
    <string name="confirm_car_info_people">所有人</string>
    <string name="confirm_car_info_carnum">车牌号</string>
    <string name="confirm_car_info_vin">车辆识别代码</string>
    <string name="confirm_car_info_engine_number">发动机号码</string>
    <string name="confirm_car_info_bland_title">选择品牌型号</string>
    <string name="confirm_car_info_bland">品牌型号</string>
    <string name="confirm_car_info_reg_date">注册日期</string>
    <string name="confirm_car_info_hot_line_title">客服热线:</string>
    <string name="confirm_car_info_car_bland_tip1">根据车辆识别码</string>
    <string name="car_create_date">车辆登记日期</string>
    <string name="confirm_car_info_car_bland_tip2">查询车型</string>
    <string name="confirm_car_info_car_bland_error_tip1">以上车型不对，</string>
    <string name="confirm_car_info_car_bland_error_tip2">请联系客服</string>
    <string name="confirm_car_info_sure">确认</string>
    <string name="choose_insurer">选择保险公司</string>
    <string name="choose_insurer_carinfo">车辆信息</string>
    <string name="choose_insurer_last_year_cost_num">上一年出险次数</string>
    <string name="choose_insurer_last_year_cost_price">上一年出险现金</string>
    <string name="choose_insurer_jqx_last_date">交强险到期日</string>
    <string name="choose_insurer_syx_last_date">商业险到期日</string>
    <string name="choose_insurer_last_year_buy_price">上一年购买保费</string>
    <string name="choose_insurer_syx_title">商业:</string>
    <string name="choose_insurer_jqx_title">交强险:</string>
    <string name="text_null">--</string>
    <string name="next_step">下一步</string>
    <string name="choose_insurer_coverage">选择险种</string>
    <string name="choose_insurer_coverage_jqx_date">交强险生效时间</string>
    <string name="choose_insurer_coverage_syx_date">商业险生效时间</string>
    <string name="modify">修改</string>
    <string name="choose_insurer_coverage_last_buy_price">按上年险种报价</string>
    <string name="choose_insurer_coverage_help">险种攻略</string>
    <string name="choose_insurer_coverage_choosed">已选择险种</string>
    <string name="choose_insurer_coverage_null">不投保</string>
    <string name="unit_wan">万</string>
    <string name="type">种</string>
    <string name="choose_insurer_coverage_buy">去报价</string>
    <string name="offer">报价</string>
    <string name="offer_clentname">客户姓名:</string>
    <string name="offer_clentmobile">联系电话:</string>
    <string name="offer_clent_type">设置分类</string>
    <string name="offer_call_client">拨打电话</string>
    <string name="offer_client_tip">该车辆还保存在您的其他几位客户的车辆列表内</string>
    <string name="offer_click_detail">点击查看</string>
    <string name="offer_renmin">中国人民保险</string>
    <string name="offer_taipingyang">太平洋保险</string>
    <string name="offer_pingan">中国平安保险</string>
    <string name="offer_detal">查看报价明细</string>
    <string name="unit_rmb">¥</string>
    <string name="offer_buy">购买</string>
    <string name="offer_choose_retry">重新选择险种</string>
    <string name="offer_old_price">原价:</string>
    <string name="offer_cur_price">现价:</string>
    <string name="zhekoulv_title">折扣率:</string>
    <string name="offer_syx_total">商业险合计</string>
    <string name="offer_zhekou_total_price">折后价格:</string>
    <string name="offer_share">报价分享</string>
    <string name="share">分享</string>
    <string name="offer_share_go_tip">没有要分享的报价</string>
    <string name="offer_share_tip">没有选择要分享的报价</string>
    <string name="offer_share_tip_sms">因短信字数限制，只能选择一条报价，您可以多次发送!</string>
    <string name="offer_share_tip1">请先设置您要分享的保险公司、折扣</string>
    <string name="offer_share_example_hint">例如80</string>
    <string name="offer_share_total_price">折后保费总额:</string>
    <string name="offer_share_tuiguangfei_price">保额差额:</string>
    <string name="offer_share_tip2">请放心!\n我们只将保险公司名称及折后保费分享给您的客户</string>
    <string name="offer_share_wx">分享至微信</string>
    <string name="offer_share_qq">分享至QQ</string>
    <string name="offer_share_sms">分享至短信</string>
    <string name="offer_zhekou_max_tip">折扣率不能超过100%</string>
    <string name="underwrite_info">填写核保信息</string>
    <string name="underwrite_tip1">投保人、被保险人、车主是同一人</string>
    <string name="underwrite_tip2">投保人、被保险人是同一人</string>
    <string name="underwrite_beibaoren_idcard_info">被保人证件信息</string>
    <string name="underwrite_idcard_ocr">拍照自动识别</string>
    <string name="underwrite_name">姓名</string>
    <string name="underwrite_name_hint">请填写身份证上的姓名信息</string>
    <string name="underwrite_sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="underwrite_birthday">出生</string>
    <string name="underwrite_birthday_hint">请填写身份证上的出生日期</string>
    <string name="underwrite_address">住址</string>
    <string name="underwrite_address_hint">请填写身份证上的住址信息</string>
    <string name="underwrite_idcard">身份证号</string>
    <string name="underwrite_idcard_hint">请填写身份证上的公民身份证号</string>
    <string name="underwrite_val_date">身份证有效期限</string>
    <string name="underwrite_val_date_start">起始日期</string>
    <string name="underwrite_val_date_end">截止日期</string>
    <string name="underwrite_get_address">签发机关</string>
    <string name="underwrite_get_address_hint">请填写身份证背面签发机关信息</string>
    <string name="underwrite_beibaoren_info">被保人信息</string>
    <string name="underwrite_beibaoren_name_hint">请输入被保人姓名</string>
    <string name="underwrite_mobile">手机号码</string>
    <string name="underwrite_beibaoren_idcard_hint">请输入被保人身份证号</string>
    <string name="underwrite_beibaoren_mobile_hint">请输入被保人手机号码</string>
    <string name="underwrite_toubaoren_info">投保人信息</string>
    <string name="underwrite_toubaoren_name_hint">请输入投保人姓名</string>
    <string name="underwrite_toubaoren_idcard_hint">请输入投保人身份证号</string>
    <string name="underwrite_toubaoren_mobile_hint">请输入投保人手机号码</string>
    <string name="underwrite_carpeople_info">车主信息</string>
    <string name="underwrite_carpeople_name_hint">请输入车主姓名</string>
    <string name="underwrite_carpeople_idcard_hint">请输入车主身份证号</string>
    <string name="underwrite_carpeople_mobile_hint">请输入车主手机号码</string>
    <string name="underwrite_choose_warranty_type">选择保单类型</string>
    <string name="order_haspay_submit_code">短信验证码提交</string>
    <string name="order_haspay_submit_code_tip1">短信验证码已发送到您的手机</string>
    <string name="order_haspay_submit_code_tip2">请保证您所填写的验证码正确，多次提交修改会导致您的订单被冻结</string>
    <string name="order_haspay_submit_code_hint">请输入收到的验证码</string>
    <string name="order_haspay_submit_code_tip3">收不到验证码，</string>
    <string name="order_haspay_submit_code_tip4">更换手机号</string>
    <string name="order_haspay_submit_code_tip5">试试?</string>
    <string name="close">关闭</string>
    <string name="order_haspay_submit_code_change_mobile">更换手机号重新获取短信验证码</string>
    <string name="order_haspay_submit_code_change_mobile_hint">请填写您需要更换的手机号码</string>
    <string name="order_haspay_submit_code_change_mobile_tip1">还是收不到？</string>
    <string name="order_haspay_submit_code_change_mobile_tip2">请您</string>
    <string name="order_haspay_submit_code_change_mobile_tip3">联系客服</string>
    <string name="wallet_accounts">提现账户</string>
    <string name="wallet_withdrawal_price">可提现金额</string>
    <string name="wallet_withdrawal_hint">单笔提现最高2万</string>
    <string name="wallet_withdrawal_help1">提现时间到账规则,</string>
    <string name="wallet_withdrawal_help2">点击查看</string>
    <string name="wallet_withdrawal_now">立即提现</string>
    <string name="wallet_withdrawal_tip1">您需要完成实名认证才可以使用提现功能</string>
    <string name="wallet_withdrawal_tip2">首次提现您还需要设置您的提现密码</string>
    <string name="wallet_withdrawal_go_auth">去认证</string>
    <string name="wallet_withdrawal_go_sex">去设置</string>
</resources>