<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translate_black"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/bg_shape_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/bg_shape_top_circle_gray"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_haspay_submit_code"
                android:textColor="@color/common_text"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/common_line1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/order_haspay_submit_code_tip1"
            android:textColor="@color/common_text_gray"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="13521110000"
            android:textColor="@color/common_red"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/order_haspay_submit_code_tip2"
            android:textColor="@color/fb_subject_color"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/edit_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/bg_shape_gray"
            android:digits="0123456789qwertyuio
            pasdfghjklmnbvcxzQWERTYUIOPLKJHGFDSAZXCVBNM"
            android:hint="@string/order_haspay_submit_code_hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:singleLine="true"
            android:textColor="@color/common_text_gray"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/order_haspay_submit_code_tip3"
                android:textColor="@color/common_text_gray"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_change_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/order_haspay_submit_code_tip4"
                android:textColor="@color/common_blue"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/order_haspay_submit_code_tip5"
                android:textColor="@color/common_text_gray"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/common_text_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_leftbottom_gray_selector"
                android:text="@string/close"
                android:textColor="@color/common_text"
                android:textSize="@dimen/sp_16" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/common_text_gray" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_rightbottom_gray_selector"
                android:text="@string/sure"
                android:textColor="@color/common_red"
                android:textSize="@dimen/sp_16" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>