<?xml version="1.0" encoding="utf-8"?><!--提现-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/common_line1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_withdrawal_price"
            android:textColor="@color/common_text"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@null"
            android:inputType="numberDecimal"
            android:hint="@string/wallet_withdrawal_hint"
            android:digits="1234567890."
            android:singleLine="true"
            android:textColor="@color/common_text_gray"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/common_line1" />


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/common_line1" />

    <LinearLayout
        android:id="@+id/layout_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wallet_accounts"
            android:textColor="@color/common_text"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_wallet_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:text=""
            android:textColor="@color/common_text"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_account_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/common_text"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="@dimen/dp_10"
            android:layout_height="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/ic_right_go" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/common_line1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center|right"
        android:paddingRight="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_withdrawal_help1"
            android:textColor="@color/common_text"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:text="@string/wallet_withdrawal_help2"
            android:textColor="@color/common_blue"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/btn_login_selector"
        android:text="@string/wallet_withdrawal_now"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/layout_auth"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_height="@dimen/dp_40"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wallet_withdrawal_tip1"
            android:textColor="@color/common_text"
            android:textSize="@dimen/sp_14" />

        <Button
            android:id="@+id/btn_auth"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/btn_blue_selector"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/wallet_withdrawal_go_auth"
            android:textColor="@color/blue_white"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wallet_withdrawal_tip2"
            android:textColor="@color/common_text"
            android:textSize="@dimen/sp_14" />

        <Button
            android:id="@+id/btn_set_pwd"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@drawable/btn_blue_selector"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/wallet_withdrawal_go_sex"
            android:textColor="@color/blue_white"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>
</LinearLayout>