<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:cacheColorHint="#00000000"
        android:divider="#00000000"
        android:scrollbars="none"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_car_info_car_bland_error_tip1"
            android:textColor="@color/common_text"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_hotline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_car_info_car_bland_error_tip2"
            android:textColor="@color/offer_confirm_car_info_hotline"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <com.wlb.agent.ui.common.view.HotlineView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_height="wrap_content">

    </com.wlb.agent.ui.common.view.HotlineView>

    <Button
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/btn_login_selector"
        android:text="@string/confirm_car_info_sure"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18" />
</LinearLayout>